--- a/app/views/public/reviews/show.html.erb
+++ b/app/views/public/reviews/show.html.erb
@@ -114,11 +114,12 @@
         </td>
         <td scope="col"><%= comment.comment_detail %></td>
         <td scope="col">
+          <% if comment.user == current_user %>
     　     <div class="btn-group">
     　      <%= link_to "編集する", edit_sauna_review_comment_path(comment.review.sauna_id,comment.review_id,comment), class: "btn btn-sm btn-outline-secondary"  %>
-            <%= link_to "削除する", sauna_review_comment_path(comment.review.sauna_id,comment.review_id,comment), method: :delete, class: "btn btn-sm btn-sm btn-outline-secondary"  %>
+           <%= link_to "削除する", sauna_review_comment_path(comment.review.sauna_id,comment.review_id,comment), method: :delete, class: "btn btn-sm btn-sm btn-outline-secondary"  %>
           </div>
-
+          <% end %>
         </td>
       </tr>
     </tbody>
