--- a/app/views/admin/saunas/new.html.erb
+++ b/app/views/admin/saunas/new.html.erb
@@ -90,22 +90,22 @@
       <%= f.label "営業ステータス", class: "col-md-2 offset-md-2 col-form-label" %>
       <div class="col-md-2">
         <%= f.radio_button :sales_state, true %>
-        <%= f.label :sales_state_true, "閉業" %>
+        <%= f.label :sales_state_true, "閉業",value: true %>
       </div>
       <div class="col-md-2">
         <%= f.radio_button :sales_state, false %>
-        <%= f.label :sales_state_false, "営業中" %>
+        <%= f.label :sales_state_false, "営業中", value: false %>
       </div>
     </div>
     <div class="form-group row">
       <%= f.label "公開状況", class: "col-md-2 offset-md-2 col-form-label" %>
       <div class="col-md-2">
         <%= f.radio_button :is_active, true %>
-        <%= f.label :is_active_true, "非公開" %>
+        <%= f.label :is_active_true, "非公開",value: true %>
       </div>
       <div class="col-md-2">
         <%= f.radio_button :is_active, false %>
-        <%= f.label :is_active_false,"公開" %>
+        <%= f.label :is_active_false,"公開", value: false %>
       </div>
     </div>
     <div class="form-group row">
